<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.polibuda.gimbus.android_lab2.Activity2">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup"
        android:layout_marginTop="30dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio1"
            android:text="@string/radio1"
            android:textSize="20sp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio2"
            android:text="@string/radio1"
            android:textSize="20sp" />
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox1"
        android:text="@string/show"
        android:textSize="20sp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image1"
        android:src="@drawable/ducks"
        android:layout_below="@id/checkbox1"
        android:layout_above="@id/back_button"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/duck_image" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/back_button" />
</RelativeLayout>
